--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,8 @@
     "iostream": "cpp"
   },
   "C_Cpp.errorSquiggles": "disabled",
-  "C_Cpp.codeAnalysis.clangTidy.checks.disabled": ["clang-diagnostic-error"]
+  "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
+    "clang-diagnostic-error"
+  ],
+  "editor.formatOnSave": true
 }
