--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
     "vector": "cpp",
     "xstring": "cpp",
     "iostream": "cpp",
-    "new": "cpp"
+    "new": "cpp",
+    "type_traits": "cpp",
+    "string": "cpp"
   },
   "C_Cpp.errorSquiggles": "disabled",
   "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
