--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,6 @@
   },
   "C_Cpp.errorSquiggles": "disabled",
   "C_Cpp.codeAnalysis.clangTidy.checks.disabled": ["clang-diagnostic-error"],
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "cSpell.customDictionaries": {}
 }
